--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "~4.0",
+        "guzzlehttp/log-subscriber": "~1.0",
         "psr/log": "~1.0"
     },
     "autoload": {
