--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "guzzlehttp/log-subscriber": "~1.0",
         "psr/log": "~1.0"
     },
+    "require-dev": {
+        "monolog/monolog": "~1.9"
+    },
     "autoload": {
         "psr-4": {"Kevintweber\\Gauges\\": "src/Gauges"}
     }
