--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
         }
     ],
     "require": {
-        "php" : ">=5.5.9",
-        "guzzlehttp/guzzle": "~6.0",
-        "psr/log": "~1.0"
+        "php" : ">=5.5.9|^7.0",
+        "guzzlehttp/guzzle": "^6.0",
+        "psr/log": "^1.0"
     },
     "require-dev": {
-        "monolog/monolog": "~1.0"
+        "monolog/monolog": "^1.0",
+        "phpunit/phpunit": "^5.7|^6.0"
     },
     "autoload": {
         "psr-4": {"Kevintweber\\Gauges\\": "src/Gauges"}
