--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -18,6 +18,8 @@ checks:
         fix_doc_comments: true
 
 build:
+    environment:
+        php: '7.0.6'
     tests:
         override:
             -
